--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mosquito-alert",
-  "version": "0.1.34-dev",
+  "version": "0.1.34",
   "description": "OpenAPI client for mosquito-alert",
   "author": "OpenAPI-Generator Contributors",
   "repository": {
